app_zrpp_kpqznn/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-kpqznn-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kpqznn.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-kpqznn
          servicePort: 9987
